@@ -17,68 +17,104 @@
 
 package org.openqa.selenium.chromium;
 
+import org.openqa.selenium.Capabilities;
+import org.openqa.selenium.devtools.Connection;
+import org.openqa.selenium.internal.Require;
+import org.openqa.selenium.json.Json;
+import org.openqa.selenium.remote.http.ClientConfig;
+import org.openqa.selenium.remote.http.HttpClient;
+import org.openqa.selenium.remote.http.HttpRequest;
+import org.openqa.selenium.remote.http.HttpResponse;
+
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Map;
+import java.util.Optional;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 import static java.net.HttpURLConnection.HTTP_OK;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.Contents.string;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
-import org.openqa.selenium.Capabilities;
-import org.openqa.selenium.devtools.Connection;
-import org.openqa.selenium.json.Json;
-import org.openqa.selenium.json.JsonException;
-import org.openqa.selenium.remote.http.HttpClient;
-import org.openqa.selenium.remote.http.HttpRequest;
-import org.openqa.selenium.remote.http.HttpResponse;
-
-import java.io.IOException;
-import java.net.URL;
-import java.util.Map;
-import java.util.Optional;
-
-class ChromiumDevToolsLocator {
+public class ChromiumDevToolsLocator {
 
   private static final Json JSON = new Json();
+  private static final Logger LOG = Logger.getLogger(ChromiumDevToolsLocator.class.getName());
 
-  public static Optional<Connection> getChromeConnector(
-      HttpClient.Factory clientFactory,
-      Capabilities caps,
-      String capabilityKey) {
+  public static Optional<URI> getReportedUri(String capabilityKey, Capabilities caps) {
     Object raw = caps.getCapability(capabilityKey);
     if (!(raw instanceof Map)) {
+      LOG.fine("No capabilities for " + capabilityKey);
       return Optional.empty();
     }
 
     raw = ((Map<?, ?>) raw).get("debuggerAddress");
     if (!(raw instanceof String)) {
+      LOG.fine("No debugger address");
       return Optional.empty();
     }
 
     int index = ((String) raw).lastIndexOf(':');
     if (index == -1 || index == ((String) raw).length() - 1) {
+      LOG.fine("No index in " + raw);
       return Optional.empty();
     }
 
     try {
-      URL url = new URL(String.format("http://%s", raw));
+      URI uri = new URI(String.format("http://%s", raw));
+      LOG.fine("URI found: " + uri);
+      return Optional.of(uri);
+    } catch (URISyntaxException e) {
+      LOG.warning("Unable to creeate URI from: " + raw);
+      return Optional.empty();
+    }
+  }
 
-      HttpClient client = clientFactory.createClient(url);
+  public static Optional<URI> getCdpEndPoint(
+    HttpClient.Factory clientFactory,
+    URI reportedUri) {
+    Require.nonNull("HTTP client factory", clientFactory);
+    Require.nonNull("DevTools URI", reportedUri);
 
-      HttpResponse res = client.execute(new HttpRequest(GET, "/json/version"));
-      if (res.getStatus() != HTTP_OK) {
-        return Optional.empty();
-      }
+    ClientConfig config = ClientConfig.defaultConfig().baseUri(reportedUri);
+    HttpClient client = clientFactory.createClient(config);
 
-      Map<String, Object> versionData = JSON.toType(string(res), MAP_TYPE);
-      raw = versionData.get("webSocketDebuggerUrl");
+    HttpResponse res = client.execute(new HttpRequest(GET, "/json/version"));
+    if (res.getStatus() != HTTP_OK) {
+      return Optional.empty();
+    }
 
-      if (!(raw instanceof String)) {
-        return Optional.empty();
-      }
+    Map<String, Object> versionData = JSON.toType(string(res), MAP_TYPE);
+    Object raw = versionData.get("webSocketDebuggerUrl");
 
-      String debuggerUrl = (String) raw;
+    if (!(raw instanceof String)) {
+      return Optional.empty();
+    }
 
-      return Optional.of(new Connection(client, debuggerUrl));
-    } catch (IOException | JsonException e) {
+    String debuggerUrl = (String) raw;
+    try {
+      return Optional.of(new URI(debuggerUrl));
+    } catch (URISyntaxException e) {
+      LOG.warning("Invalid URI for endpoint " + raw);
+      return Optional.empty();
+    }
+  }
+
+  public static Optional<Connection> getChromeConnector(
+      HttpClient.Factory clientFactory,
+      Capabilities caps,
+      String capabilityKey) {
+
+    try {
+      return getReportedUri(capabilityKey, caps)
+        .flatMap(uri -> getCdpEndPoint(clientFactory, uri))
+        .map(uri -> new Connection(
+          clientFactory.createClient(ClientConfig.defaultConfig().baseUri(uri)),
+          uri.toString()));
+    } catch (Exception e) {
+      LOG.log(Level.WARNING, "Unable to create CDP connection", e);
       return Optional.empty();
     }
   }
